--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.10.0",
+    "npm": "6.14.13"
+  }, 
   "scripts": {
-    "start": "ts-node src/config/server.ts",
-    "dev": "nodemon -x ts-node src/config/server.ts"
+    "start": "ts-node index.ts",
+    "dev": "nodemon -x ts-node index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.1",
+    "@types/passport": "^1.0.4",
+    "@types/passport-google-oauth20": "^2.0.3",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.2",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
