--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,6 +66,6 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*.ts" /* Include every ts file in source folder */],
+  "include": ["src/**/*.ts", "index.ts" /* Include every ts file in source folder */],
   "exclude": ["node_modules" /* exclude everything in  node_modules */]
 }
