--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "6.14.13"
   }, 
   "scripts": {
-    "start": "ts-node index.ts",
-    "dev": "nodemon -x ts-node index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon -x ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
