--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "engines": {
     "node": "16.10.0",
     "npm": "6.14.13"
-  }, 
+  },
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon -x ts-node src/index.ts"
+    "start": "ts-node index.ts",
+    "dev": "nodemon -x ts-node index.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,7 @@
     "@types/passport-google-oauth20": "^2.0.3",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.2",
+    "mongoose": "^6.0.12",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
