--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/passport": "^1.0.4",
     "@types/passport-google-oauth20": "^2.0.3",
     "cookie-session": "^1.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.4",
