--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "start": "ts-node index.ts",
-    "dev": "nodemon -x ts-node index.ts"
+    "server": "nodemon -x ts-node index.ts",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
     "@types/node": "^14.6.1",
     "@types/passport": "^1.0.4",
     "@types/passport-google-oauth20": "^2.0.3",
+    "concurrently": "^6.3.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
